--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
 
         </nav>
         <main id="clearfix">
+            <div id="main_wrapper">
             <div id="h1bg">
             <h1>Home</h1>
         </div>
@@ -37,6 +38,7 @@
                        create and design websites. So, come in, take a look around, and let me know what you think on the forum.
                    </p>
                 </div>
+           </div>
            </div>
 
 
