--- a/about.html
+++ b/about.html
@@ -2,32 +2,32 @@
 <html lang="en-us">
     <head>
         <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+        <meta name="description" content="personal portfolio site">
+        <link rel="stylesheet" type="text/css" href="css/normalize.css">
         <link rel="stylesheet" type="text/css" href="css/css.css">
+        <link rel="stylesheet" type="text/css" href="css/large.css">
         <link href="https://fonts.googleapis.com/css?family=Nunito%7cRoboto:700,900" rel="stylesheet"> 
-        <title>Iterstice Design About Page</title>
+        <title>Iterstice Design Home Page</title>
+        <script src="scripts/hamburger.js"></script>
     </head>
     <body>
-        <header>
-            <picture>
-                <source media="(max-width:600px)" srcset="images/intersticeLogo-01.svg">
-                <source media="(min-width:601px)" srcset="images/intersticeLogo-01.svg">
-                <img id="logo" src="images/intersticeLogo-01.svg" alt="interstice design logo">
-            </picture>
+        <header class="flexcontainer">
+            <img class="logo" src="images/intersticeLogo-01.svg" alt="interstice design logo">
         </header>
         <nav>
-                <ul id="flexcontainer">
-                        <li><a href="index.html">Home</a></li>
-                        <li><a href="about.html">About</a></li>
-                        <li><a href="contact.html">Contact</a></li>
-                        <li><a href="portfolio.html">Portfolio</a></li>
-                        <li><a href="blog.html">Blog</a></li>
-                    </ul>
+            <button class="hide" onclick="toggelMenu()">&#9776;</button>
+            
+            <ul id="nav_button" class="flexcontainer flex_column hide">
+                <li class="active"><a href="index.html">Home</a></li>
+                <li class="active"><a href="about.html">About</a></li>
+                <li class="active"><a href="contact.html">Contact</a></li>
+                <li class="active"><a href="portfolio.html">Portfolio</a></li>
+                <li class="active"><a href="blog.html">Blog</a></li>
+            </ul>
 
         </nav>
-        <main id="clearfix">
-            <div id="h1bg">
-                <h1>About</h1>
-           </div>
+        <main>
 
             <div class="contentBox">
                     <h2>About Me</h2>
