--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
             <ul id="nav_button" class="flexcontainer flex_column hide">
                 <li class="active"><a href="index.html">Home</a></li>
                 <li class="active"><a href="about.html">About</a></li>
-                <li class="active"><a href="contact.html">Contact</a></li>
+                <!----<li class="active"><a href="contact.html">Contact</a></li>-->
                 <li class="active"><a href="portfolio.html">Portfolio</a></li>
-                <li class="active"><a href="blog.html">Blog</a></li>
+                <!--<li class="active"><a href="blog.html">Blog</a></li>-->
             </ul>
 
         </nav>
