--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                 <div>
             <ul class="flexcontainer_center">
                 <li>&copy; Greg La Plant 2019 | </li>
-                <li><a href="mailto:abc@google.com"> Greg's email@gmail.com </a> </li>
+                <li><a href="mailto:abc@google.com"><i class="fa fa-envelope" aria-hidden="true"></i> </a> </li>
                 
             </ul>
             </div>
