Portfolio Hover and cards

--- a/motion.html
+++ b/motion.html
@@ -23,11 +23,12 @@
                     <button class="hide" onclick="toggelMenu()">&#9776;</button>
                     
                     <ul id="nav_button" class="flexcontainer flex_column hide">
-                        <li class="active"><a href="index.html">Home</a></li>
-                        <li class="active"><a href="about.html">About</a></li>
-                        <!----<li class="active"><a href="contact.html">Contact</a></li>-->
-                        <li class="active"><a href="portfolio.html">Portfolio</a></li>
-                        <!--<li class="active"><a href="blog.html">Blog</a></li>-->
+                            <li class="active"><a href="index.html">Home</a></li>
+                            <li class="active"><a href="about.html">About</a></li>
+                            <li class="active"><a href="portfolio.html">Portfolio</a></li>
+                            <li class="active"><a href="print.html">Print</a></li>
+                            <li class="active"><a href="motion.html">Motion</a></li>
+                            <li class="active"><a href="web.html">Web</a></li>
                     </ul>
         
                 </nav>
