--- a/portfolio.html
+++ b/portfolio.html
@@ -54,10 +54,8 @@
                     </div>
                     
                     <div class="card  card_bg shadow">
-                          <a href="motion.html" class="shadow"><video 
-                          width="300" height="200" >
-                          <source src="images/VideoCopilotMocha.mp4" type="video/mp4">
-                          </video></a>
+                          <a href="motion.html" class="shadow">
+                          <img  src="images/Icons2.png" alt="print portfolio">
                            <h2 class="titles">Motion</h2>
                           </div>
                     <div class="card  card_bg shadow">
