--- a/about.html
+++ b/about.html
@@ -81,7 +81,7 @@
                             <p>Majoring in Web Development with an Emphasis in Design</br>
                             Earned Front-End Development Certificate on July 23rd 2019. </br>
                             Working on BackEnd Development certificate</br>
-                            Working on Web Media Certificate</br>
+                            Earned Web Media Certificate Aug 2019</br>
                         </P>
                            </div>
                             
